fix signout button look on mobile

--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -34,6 +34,16 @@
       margin-left: 1rem;
     }
   }
+  &-signout {
+    padding: 1.5rem;
+    margin-top: 0.5rem !important;
+    display: block;
+    width: 100%;
+    @include lg {
+      padding: 1rem 2rem;
+      width: fit-content;
+    }
+  }
   &-copy {
     margin: 1rem 2rem;
     padding: 2rem;
